--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,12 @@
 drupal 4.0.0, xx/xx/xxxx
 ------------------------
 - added tracker.module:
-    * replaces the previous "your [site]" links.
+    * replaces the previous "your [site]" links (recent comments and nodes).
 - added weblogs.module. 
     * this will ping weblogs.com when new content is promoted.
 - added taxonomy module which replaces the meta module.
     * supports relations, hierarchies and synonyms.
-- added a chaching system.
+- added a caching system.
     * speeds up pages for anonymous users and reduces system load.
 - added support for external SMTP libraries.
 - added an archive extension to the calendar.
@@ -14,7 +14,6 @@ drupal 4.0.0, xx/xx/xxxx
 - themes:
     * cleaned up the theme system.
     * moved themes that are not maintained to contributions CVS repository.
-    * added theme Trillian.
 - database abstraction:
     * changed to PEAR database abstraction layer.
     * using ANSI SQL queries to be more portable.
@@ -26,14 +25,14 @@ drupal 4.0.0, xx/xx/xxxx
 - changed block system:
     * various hard coded blocks are now dynamic.
     * blocks can now be enabled and/or be set by the user.
-    * blocks can be set to ownly show up on some pages.
+    * blocks can be set to only show up on some pages.
     * merged box module with block module.
 - rewrote large parts of the node system:
     * fixed node retrieval based on titles.
     * blogs can be updated.
     * teasers (abstracts) on all node types.
     * improved error checking and usability changes.
-    * revision support.
+    * content versioning support.
 - improved book module to support text, html and php pages.
 - added a general outliner which will let any node type be linked to a book.
 - search:
@@ -46,7 +45,8 @@ drupal 4.0.0, xx/xx/xxxx
     * made front page a configuration setting.
     * made each cloud site have its own settings.
     * modules and themes can now be enabled/disabled using the administrative pages.
-    * usabilty changes (renamed links, better UI, etc)
+    * added url abstraction for links.
+    * usability changes (renamed links, better UI, etc)
 
 drupal 3.0.1, 15/10/2001
 ------------------------
@@ -152,7 +152,7 @@ drupal 2.0.0, 15/03/2001
     * improved database abstraction layer
     * improved themes:
         + W3C validation on a best effort basis
-        + added theme "example" (alas "Stone Age")
+        + added theme "example" (alias "Stone Age")
     * added new scripts to directory "scripts"
     * added directory "misc"
     * added CREDITS file
