- adding descriptions to modules (thanks Joe + Scott). - fixed comment flat list view missing 1 comment. - changed update.php around a bit.     * security check isn't in effect if the db hasn't been updated.     * instructions re-organized.     * fixed some minor updates. - updated database.mysql done by UnConeD. - changelog update.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -44,7 +44,7 @@ drupal 4.0.0, xx/xx/xxxx
     * changed output to valid XHTML.
     * improved multiple sites using the same Drupal database support.
     * added support for session IDs in URLs instead of cookies.
-    * made front page a configuration setting.
+    * made the type of content on the front page configurable
     * made each cloud site have its own settings.
     * modules and themes can now be enabled/disabled using the administrative pages.
     * added URL abstraction for links.
