--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,179 @@
+// $Id$
 
-* http://www.drupal.org/node.php?title=drupal+handbook
-   - online installation guidelines
+REQUIREMENTS
+------------
 
-* http://www.drupal.org/
-   - Drupal's project page for those willing to get involved in the
-     ongoing development
+Drupal requires a webserver, PHP4 (http://www.php.net/) and a database
+server supported by the PHP PEAR API (pear.php.net)
+
+NOTE: The Apache webserver and MySQL database are strongly recommended;
+other webserver and database combinations such as IIS and PostgreSQL
+are possible but tested to a lesser extend.
+
+SERVER CONFIGURATION
+--------------------
+
+Your PHP must have the following settings:
+
+  register_globals         1
+  magic_quotes_gpc         0
+  session.save_handler     user
+
+In addition, we recommend the following settings:
+
+  session.cache_limiter    none
+
+These values are set in php.ini and can be overwritten in a .htaccess
+file; you can print out your local PHP settings with PHP's phpinfo()
+function.
+
+OPTIONAL COMPONENTS
+-------------------
+
+- To use XML-based services such as the Blogger API, Jabber, RSS
+  syndication, you will need PHP's XML extension.  This extension is
+  enabled by default in standard PHP4 installations.
+
+- If you want support for clean URLs, you'll need mod_rewrite and
+  the ability to use local .htaccess files. (More information can
+  be found in the Drupal handbook on drupal.org.)
+
+INSTALLATION
+------------
+
+1. DOWNLOAD DRUPAL
+
+   You can obtain the latest Drupal release from http://www.drupal.org/.
+   Download the current tar.gz format and extract the files:
+
+     $ wget http://drupal.org/drupal/drupal-x.x.x.tgz
+     $ tar -zxvf drupal-x.x.x.tgz
+
+   This will create a new directory drupal-x.x.x/ containing all
+   Drupal files and directories.  Move the contents of that directory
+   into a directory within your webserver's document root or your
+   public HTML directory:
+
+     $ mv drupal-4.1.0 /var/www/html
+
+   NOTE: when copying files, ensure you also copy the hidden .htaccess
+   file.
+
+2. CREATE THE DRUPAL DATABASE
+
+   First, you must create a new database for your Drupal site:
+
+     $ mysqladmin -u root -p create dupal
+
+   MySQL will prompt for the root database password and then create
+   the initial database files.  Next you must login and set the access
+   database rights:
+
+     $ mysql -u root -p
+
+   Again, you will be asked for the root database password.  At the
+   MySQL prompt, enter following command:
+
+     GRANT ALL PRIVILEGES ON drupal.*
+        TO nobody@localhost IDENTIFIED BY 'PASSWORD';
+
+   where
+
+    'drupal' is the name of your database
+    'nobody@localhost' is the userid of your webserver MySQL account.
+
+   If successful, MySQL will reply with
+
+     Query OK, 0 rows affected
+
+   to activate the new permissions you must enter the command
+
+     flush privileges;
+
+   and then enter '\q' to exit MySQL.
+
+3. LOAD THE DRUPAL DATABASE SCHEME
+
+   Once you have a database, you must load the required tables:
+
+    $ mysql -u nobody -p drupal < database/database.mysql
+
+4. CONNECTING DRUPAL
+
+   Drupal server options are specified in includes/conf.php
+
+   Drupal allows for multiple virtual host installations; to configure
+   a virtual server host, you can create the configuration file
+
+     includes/www.yourserver.com.php
+
+   where www.yourserver.com is your website's URL.
+
+   Before you can run Drupal, you must set the database URL option.
+   Copy conf.php to hostname.php and edit the $db_url line to match
+   the database defined in the previous steps:
+
+     $db_url = "mysql://username:password@localhost/drupal";
+
+   Also set your site's $base_url as explained in the configuration
+   file.
+
+   NOTE: for more information about multiple virtual hosts or the
+   configuration settings, consult the Drupal handbook at drupal.org.
+
+5. CONFIGURE DRUPAL
+
+   You can now launch your browser and point it to your Drupal site.
+
+   Create an account and login.  The first account will automatically
+   become the main administrator account.
+
+6. CRON TASKS
+
+   Many drupal modules have periodic tasks that must be triggered by a
+   cron job.  To activate these tasks, you must call the cron page;
+   this will pass control to the modules and the modules will decide
+   if and what they must do.
+
+   The following example crontab line will activate the cron script
+   on the hour:
+
+   0    *   *   *   *   wget -O /dev/null http://HOSTNAME/cron.php
+
+   More information about the cron scripts are available in the admin
+   help pages and in the Drupal handbook at drupal.org.  Example
+   scripts can be found in the scripts/ directory.
+
+DRUPAL ADMINISTRATION
+---------------------
+
+Your Drupal website defaults to a very basic configuration with only
+a few active modules, one theme, and no user access rights.
+
+Standard services can be selected and configured through the
+administration panel; additional community-contributed modules and
+themes are available from drupal.org
+
+CUSTOMIZING YOUR THEME(S)
+-------------------------
+
+Now that your server is running, you will want to customize the look
+of your site.  Several sample themes are included in the Drupal
+installation and more can be downloaded from drupal.org.
+
+Customizing each theme depends on the theme. In general, each theme
+contains a PHP file themename.theme which defines a function header()
+that can be changed to reference your own logos.
+
+Most themes also contain stylesheets or PHP configuration files to
+tune the colours and layouts; check the themes/ directory for README
+files describing each alternate theme.
+
+MORE INFORMATION
+----------------
+
+For platform specific configuration issues and other installation and
+administration assistance, please consult the Drupal handbook at
+http://www.drupal.org/.  You can also find support at the Drupal
+support forum or through the Drupal mailing lists.
+
