--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Drupal x.x.x, xxxx-xx-xx (to be released)
+Drupal 4.2.0, xxxx-xx-xx (to be released)
 ------------------------
 
 - added support for clean URLs.
@@ -23,6 +23,8 @@ Drupal x.x.x, xxxx-xx-xx (to be released)
     * added default node settings to control the behaviour for promotion, moderation and other options.
 - themes:
     * replaced theme "Goofy" by "Xtemplate", a template driven theme.
+- removed the 'register_globals = on' requirement.
+- added better installation instructions.
 
 Drupal 4.1.0, 2003-02-01
 ------------------------
