- Setting the date of the 4.2.0 release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,7 @@ Drupal x.x.x, xxxx-xx-xx (to be released)
 - usability improvements:
     * added support for "mass node operations" to ease repetitive tasks.
 
-Drupal 4.2.0, xxxx-xx-xx (to be released)
+Drupal 4.2.0, 2003-08-01
 ------------------------
 
 - added support for clean URLs.
